--- a/Realta.Persistence/Realta.Persistence.csproj
+++ b/Realta.Persistence/Realta.Persistence.csproj
@@ -10,9 +10,14 @@
 	
 	<ItemGroup>
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.1" />
 	</ItemGroup>
 	
 	<ItemGroup>
 	  <ProjectReference Include="..\Realta.Domain\Realta.Domain.csproj" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <Folder Include="Repositories\RepositoryExtensions\" />
 	</ItemGroup>
 </Project>
