--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ Realta.Persistence/bin
 Realta.Persistence/obj
 Realta.Services/bin
 Realta.Services/obj
-Realta.Services.Abstaction/bin
-Realta.Services.Abstaction/obj
+Realta.Services.Abstraction/bin
+Realta.Services.Abstraction/obj
 Realta.WebAPI/bin
 Realta.WebAPI/obj
