--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,18 @@
 .idea
-#.vs
+.vs
 .vscode
 .idea/*
-#.vs/*
+.vs/*
 .vscode/*
-#Realta.Contract/bin
-#Realta.Contract/obj
-#Realta.Domain/bin
-#Realta.Domain/obj
-#Realta.Persistence/bin
-#Realta.Persistence/obj
-#Realta.Services/bin
-#Realta.Services/obj
-#Realta.Services.Abstraction/bin
-#Realta.Services.Abstraction/obj
-#Realta.WebAPI/bin
-#Realta.WebAPI/obj
+Realta.Contract/bin
+Realta.Contract/obj
+Realta.Domain/bin
+Realta.Domain/obj
+Realta.Persistence/bin
+Realta.Persistence/obj
+Realta.Services/bin
+Realta.Services/obj
+Realta.Services.Abstraction/bin
+Realta.Services.Abstraction/obj
+Realta.WebAPI/bin
+Realta.WebAPI/obj
