--- a/Realta.Domain/Realta.Domain.csproj
+++ b/Realta.Domain/Realta.Domain.csproj
@@ -8,4 +8,8 @@
     <RootNamespace>Realta.Domain</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.11" />
+  </ItemGroup>
+
 </Project>
